<resources>
    <string name="app_name">Koraan</string>
    <string name="btn7">الأعراف</string>
    <string name="btn6">الأنعام</string>
    <string name="btn5">المائدة</string>
    <string name="btn4">النساء</string>
    <string name="btn3">آل عمران</string>
    <string name="btn2">البقرة</string>
    <string name="btn1">الفاتحة</string>
    <string name="btn14">إبراهيم</string>
    <string name="btn13">الرعد</string>
    <string name="btn12">يوسف</string>
    <string name="btn11">هود</string>
    <string name="btn10">يونس</string>
    <string name="btn9">التوبة</string>
    <string name="btn8">الأنفال</string>
    <string name="btn21">الأنبياء</string>
    <string name="btn20">طه</string>
    <string name="btn19">مريم</string>
    <string name="btn18">الكهف</string>
    <string name="btn17">الإسراء</string>
    <string name="btn16">النحل</string>
    <string name="btn15">الحجر</string>
    <string name="btn28">القصص</string>
    <string name="btn27">النّمل</string>
    <string name="btn26">الشعراء</string>
    <string name="btn25">الفرقان</string>
    <string name="btn24">النّور</string>
    <string name="btn23">المؤمنون</string>
    <string name="btn22">الحج</string>
    <string name="btn35">فاطر</string>
    <string name="btn34">سبأ</string>
    <string name="btn33">الأحزاب</string>
    <string name="btn32">السجدة</string>
    <string name="btn31">لقمان</string>
    <string name="btn30">الرّوم</string>
    <string name="btn29">العنكبوت</string>
    <string name="btn42">الشورى</string>
    <string name="btn41">فصّلت</string>
    <string name="btn40">غافر</string>
    <string name="btn39">الزمر</string>
    <string name="btn38">ص</string>
    <string name="btn37">الصافات</string>
    <string name="btn36">يس</string>
    <string name="btn49">الحجرات</string>
    <string name="btn48">الفتح</string>
    <string name="btn47">محمد</string>
    <string name="btn46">الأحقاف</string>
    <string name="btn45">الجاثية</string>
    <string name="btn44">الدّخان</string>
    <string name="btn43">الزخرف</string>
    <string name="btn56">الواقعة</string>
    <string name="btn55">الرحمن</string>
    <string name="btn54">القمر</string>
    <string name="btn53">النجم</string>
    <string name="btn52">الطور</string>
    <string name="btn51">الذاريات</string>
    <string name="btn50">ق</string>
    <string name="btn62">الطارق←الناس</string>
    <string name="btn61">المرسلات←البروج</string>
    <string name="btn60">نوح←الإنسان</string>
    <string name="btn59">التحريم←المعارج</string>
    <string name="btn58">الصف←الطلاق</string>
    <string name="btn57">الحديد←الممتحنة</string>
    <string name="randomS">اختيار عشوائي</string>
    <string name="todayS">سورة اليوم: غير محدد</string>
    <string name="UndoB">تراجع</string>
    <string name="CleatB">مسح</string>
    <string name="doneS">السور المنجزة: 0</string>
    <string name="remainS">السور المتبقية: 62</string>
    <string name="title_activity_end_reading">EndReading</string>
    <string name="end_read">
        *اللَّهُمَّ ارْحَمْنِي بالقُرْءَانِ وَاجْعَلهُ لِي إِمَاماً وَنُوراً وَهُدًى وَرَحْمَةً
        \n\n
        *اللَّهُمَّ ذَكِّرْنِي مِنْهُ مَانَسِيتُ وَعَلِّمْنِي مِنْهُ مَاجَهِلْتُ وَارْزُقْنِي تِلاَوَتَهُ آنَاءَ اللَّيْلِ وَأَطْرَافَ النَّهَارِ وَاجْعَلْهُ لِي حُجَّةً يَارَبَّ العَالَمِينَ
        \n\n
        *اللَّهُمَّ أَصْلِحْ لِي دِينِي الَّذِي هُوَ عِصْمَةُ أَمْرِي، وَأَصْلِحْ لِي دُنْيَايَ الَّتِي فِيهَا مَعَاشِي، وَأَصْلِحْ لِي آخِرَتِي الَّتِي فِيهَا مَعَادِي، وَاجْعَلِ الحَيَاةَ زِيَادَةً لِي فِي كُلِّ خَيْرٍ وَاجْعَلِ المَوْتَ رَاحَةً لِي مِنْ كُلِّ شَرٍّ
        \n\n
        *اللَّهُمَّ اجْعَلْ خَيْرَ عُمْرِي آخِرَهُ وَخَيْرَ عَمَلِي خَوَاتِمَهُ وَخَيْرَ أَيَّامِي يَوْمَ أَلْقَاكَ فِيهِ
        \n\n
        *اللَّهُمَّ إِنِّي أَسْأَلُكَ عِيشَةً هَنِيَّةً وَمِيتَةً سَوِيَّةً وَمَرَدًّا غَيْرَ مُخْزٍ وَلاَ فَاضِحٍ
        \n\n
        *اللَّهُمَّ إِنِّي أَسْأَلُكَ خَيْرَ المَسْأَلةِ وَخَيْرَ الدُّعَاءِ وَخَيْرَ النَّجَاحِ وَخَيْرَ العِلْمِ وَخَيْرَ العَمَلِ وَخَيْرَ الثَّوَابِ وَخَيْرَ الحَيَاةِ وَخيْرَ المَمَاتِ وَثَبِّتْنِي وَثَقِّلْ مَوَازِينِي وَحَقِّقْ إِيمَانِي وَارْفَعْ دَرَجَتِي وَتَقَبَّلْ صَلاَتِي وَاغْفِرْ خَطِيئَاتِي وَأَسْأَلُكَ العُلَا مِنَ الجَنَّةِ
        \n\n
        *اللَّهُمَّ إِنِّي أَسْأَلُكَ مُوجِبَاتِ رَحْمَتِكَ وَعَزَائِمِ مَغْفِرَتِكَ وَالسَّلاَمَةَ مِنْ كُلِّ إِثْمٍ وَالغَنِيمَةَ مِنْ كُلِّ بِرٍّ وَالفَوْزَ بِالجَنَّةِ وَالنَّجَاةَ مِنَ النَّارِ
        \n\n
        *اللَّهُمَّ أَحْسِنْ عَاقِبَتَنَا فِي الأُمُورِ كُلِّهَا، وَأجِرْنَا مِنْ خِزْيِ الدُّنْيَا وَعَذَابِ الآخِرَةِ
        \n\n
        *اللَّهُمَّ اقْسِمْ لَنَا مِنْ خَشْيَتِكَ مَاتَحُولُ بِهِ بَيْنَنَا وَبَيْنَ مَعْصِيَتِكَ وَمِنْ طَاعَتِكَ مَاتُبَلِّغُنَا بِهَا جَنَّتَكَ وَمِنَ اليَقِينِ مَاتُهَوِّنُ بِهِ عَلَيْنَا مَصَائِبَ الدُّنْيَا وَمَتِّعْنَا بِأَسْمَاعِنَا وَأَبْصَارِنَا وَقُوَّتِنَا مَاأَحْيَيْتَنَا وَاجْعَلْهُ الوَارِثَ مِنَّا وَاجْعَلْ ثَأْرَنَا عَلَى مَنْ ظَلَمَنَا وَانْصُرْنَا عَلَى مَنْ عَادَانَا وَلاَ تجْعَلْ مُصِيبَتَنَا فِي دِينِنَا وَلاَ تَجْعَلِ الدُّنْيَا أَكْبَرَ هَمِّنَا وَلَا مَبْلَغَ عِلْمِنَا وَلاَ تُسَلِّطْ عَلَيْنَا مَنْ لَا يَرْحَمُنَا
        \n\n
        *اللَّهُمَّ لَا تَدَعْ لَنَا ذَنْبًا إِلَّا غَفَرْتَهُ وَلَا هَمَّا إِلَّا فَرَّجْتَهُ وَلَا دَيْنًا إِلَّا قَضَيْتَهُ وَلَا حَاجَةً مِنْ حَوَائِجِ الدُّنْيَا وَالآخِرَةِ إِلَّا قَضَيْتَهَا يَاأَرْحَمَ الرَّاحِمِينَ
        \n\n
        *رَبَّنَا آتِنَا فِي الدُّنْيَا حَسَنَةً وَفِي الآخِرَةِ حَسَنَةً وَقِنَا عَذَابَ النَّارِ وَصَلَّى اللهُ عَلَى سَيِّدِنَا وَنَبِيِّنَا مُحَمَّدٍ وَعَلَى آلِهِ وَأَصْحَابِهِ الأَخْيَارِ وَسَلَّمَ تَسْلِيمًا كَثِيراً.
    </string>
    <string name="action_settings">Settings</string>
    <string name="koraan_done">استكمال الختمية</string>
    <string name="exit_app">خروج</string>
    <string name="credit">برمجة و تصميم محمد عبدالله</string>
    <string name="intro_icon">Intro_icon</string>
    <string name="cover_app">cover_app</string>
    <string name="do3a2_end">دعاء ختم القرآن</string>
</resources>